Refactored task creation into four types; ID now supports both user-provided and system-generated for conditional task.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ license = "MIT or Apache-2.0"
 repository = "https://github.com/hailongxu/taskorch"
 keywords = ["concurrency","task","orchestration","scheduler"]
 category = ["concurrency"]
+readme = "README.md"
 
 [dependencies]
