--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "taskorch"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2024"
 authors = ["xuhailong"]
 description = "Concurrent Pool for task processing"
@@ -11,3 +11,12 @@ category = ["concurrency"]
 readme = "README.md"
 
 [dependencies]
+
+[features]
+# Log levels: none or single only, otherwise a compile error
+log-error=[]
+log-warn=[]
+log-info=[]
+log-debug=[]
+log-trace=[]
+
