Add ANSI color support for log messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "taskorch"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 authors = ["xuhailong"]
 description = "Concurrent Pool for task processing"
@@ -19,3 +19,5 @@ log-warn=[]
 log-info=[]
 log-debug=[]
 log-trace=[]
+# Controls whether log messages are printed with ANSI color codes
+log-color=[]
